--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,41 @@
 anyio==4.10.0
 asgiref==3.9.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
 certifi==2025.8.3
+cffi==1.17.1
+channels==4.3.1
+channels_redis==4.3.0
+constantly==23.10.4
+cryptography==45.0.7
+daphne==4.2.1
 Django==5.2.6
 django-jazzmin==3.0.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
+msgpack==1.1.1
+packaging==25.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pyOpenSSL==25.1.0
 python-decouple==3.8
 python-dotenv==1.1.1
 python-telegram-bot==22.3
+redis==6.4.0
+service-identity==24.2.0
+setuptools==80.9.0
 sniffio==1.3.1
 sqlparse==0.5.3
+Twisted==25.5.0
+txaio==25.6.1
+typing_extensions==4.15.0
 tzdata==2025.2
+zope.interface==7.2
